--- a/.github/workflows/malformed-template-labeler.yml
+++ b/.github/workflows/malformed-template-labeler.yml
@@ -141,16 +141,15 @@ jobs:
               console.log('Found ' + comments_payload.data.length + 'x comments')
               
               const commentsToDelete = comments_payload.data.filter(c => {
-                  console.log(c)
-                  console.log(c.user.login)
-                  console.log(commentsIdentificationConfig.userLogins.includes(c.user.login))
-                  console.log(c.body.startsWith(commentsIdentificationConfig.startToken))
-              
-                  return 
+                  let retVal = 
                     // Check if the user who commented is the expected one
                     commentsIdentificationConfig.userLogins.includes(c.user.login) &&
                     // Check if the comment body starts with the startToken
-                    c.body.startsWith(commentsIdentificationConfig.startToken)
+                    c.body.startsWith(commentsIdentificationConfig.startToken);
+                  
+                  console.log(retVal)
+                  
+                  return retVal
               })
 
               console.log('The following comments will be deleted:', commentsToDelete)
