--- a/.github/workflows/malformed-template-labeler.yml
+++ b/.github/workflows/malformed-template-labeler.yml
@@ -141,11 +141,13 @@ jobs:
               console.log('Found ' + comments_payload.data.length + 'x comments')
               
               const commentsToDelete = comments_payload.data.filter(c => {
-                  return
+                  let matchingComment =
                     // Check if the user who commented is the expected one
                     commentsIdentificationConfig.userLogins.includes(c.user.login) &&
                     // Check if the comment body starts with the startToken
                     c.body.startsWith(commentsIdentificationConfig.startToken);
+                  
+                  return matchingComment
               })
 
               console.log('The following comments will be deleted:', commentsToDelete)
