--- a/.github/workflows/malformed-template-labeler.yml
+++ b/.github/workflows/malformed-template-labeler.yml
@@ -4,6 +4,9 @@ on:
   issues:
     types: [opened, edited, labeled, unlabeled]
     
+# Process only one issue at a time
+concurrency: 'ci-malformed-issue-template-labeler'
+
 jobs:
   check-issue:
     runs-on: ubuntu-latest
