--- a/.github/ISSUE_TEMPLATE/forms_bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/forms_bug_report.yml
@@ -39,19 +39,13 @@ body:
     id: steps-to-reproduce
     attributes:
       label: Steps to reproduce the bug
-#      description: |
-#          If you can't cause the bug to show up again reliably (and hence don't have a proper set of steps to give us), 
-#          please still try to give as many details as possible on how you think you encountered the bug.
-#      placeholder: |
-#        <!--
-#        1. Go to '...'
-#        2. Press on '....'
-#        3. Swipe down to '....'
-#        -->
-#     value: |
-#        1.
-#        2.
-#        3.
+      description: |
+          If you can't cause the bug to show up again reliably (and hence don't have a proper set of steps to give us), 
+          please still try to give as many details as possible on how you think you encountered the bug.
+      placeholder: |
+        1. Go to '...'
+        2. Press on '....'
+        3. Swipe down to '....'
 
   - type: textarea
     id: actual-behavior
