--- a/.github/ISSUE_TEMPLATE/forms_bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/forms_bug_report.yml
@@ -8,8 +8,8 @@ body:
         Thanks for taking the time to fill out this issue! :hugs:
         
         However note the following before opening an issue:
-        IF YOU DON'T FILL IN THE TEMPLATE PROPERLY, YOUR ISSUE IS LIABLE TO BE CLOSED.
-        If you feel tired/lazy right now, open your issue some other time. We'll wait.
+        * IF YOU DON'T FILL IN THE TEMPLATE PROPERLY, YOUR ISSUE IS LIABLE TO BE CLOSED.
+        * If you feel tired/lazy right now, open your issue some other time. We'll wait.
 
   - type: checkboxes
     id: checklist
