--- a/.github/ISSUE_TEMPLATE/forms_bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/forms_bug_report.yml
@@ -66,8 +66,8 @@ body:
       label: Screenshots/Screen recordings
       description: |
         If applicable, add screenshots or a screen recording to help explain your problem.
-        GitHub supports uploading them directly in the issue text box.
-        If your file is too big for Github to accept, feel free to paste a link from an image/video hoster here instead.
+        GitHub supports uploading them directly in the text box.
+        If your file is too big for Github to accept, try to compress it (ZIP-file) or feel free to paste a link from an image/video hoster here instead.
         
         :heavy_exclamation_mark: DON'T POST SCREENSHOTS OF THE ERROR PAGE.
         Instead paste the text in the "Logs"-section below.
