--- a/.github/ISSUE_TEMPLATE/forms_bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/forms_bug_report.yml
@@ -45,6 +45,8 @@ body:
         1. Go to '...'
         2. Press on '....'
         3. Swipe down to '....'
+    validations:
+      required: true
 
   - type: textarea
     id: actual-behavior
