--- a/.github/ISSUE_TEMPLATE/forms_bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/forms_bug_report.yml
@@ -39,8 +39,9 @@ body:
     attributes:
       label: Steps to reproduce the bug
       description: |
-          If you can't cause the bug to show up again reliably (and hence don't have a proper set of steps to give us), 
-          please still try to give as many details as possible on how you think you encountered the bug.
+        What did you do that the bug shows up?
+        
+        If you can't cause the bug to show up again reliably (and hence don't have a proper set of steps to give us), please still try to give as many details as possible on how you think you encountered the bug.
       placeholder: |
         1. Go to '...'
         2. Press on '....'
@@ -67,11 +68,13 @@ body:
     attributes:
       label: Screenshots/Screen recordings
       description: |
+        A picture or video is worth a thousand words.
+        
         If applicable, add screenshots or a screen recording to help explain your problem.
         GitHub supports uploading them directly in the text box.
         If your file is too big for Github to accept, try to compress it (ZIP-file) or feel free to paste a link from an image/video hoster here instead.
         
-        :heavy_exclamation_mark: DON'T POST SCREENSHOTS OF THE ERROR PAGE.
+        :heavy_exclamation_mark:  DON'T POST SCREENSHOTS OF THE ERROR PAGE.
         Instead paste the text in the "Logs"-section below.
 
   - type: textarea
