--- a/.github/ISSUE_TEMPLATE/forms_bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/forms_bug_report.yml
@@ -1,6 +1,6 @@
 name: Bug Report2
 description: Create a bug report to help us improve
-labels: [bug2]
+labels: [bug, no-bot]
 body:
   - type: markdown
     attributes:
