--- a/.github/workflows/spam-remover.yml
+++ b/.github/workflows/spam-remover.yml
@@ -113,7 +113,6 @@ jobs:
 
             
             async function manageComments(config, commentsIdentificationConfig, validationResult) {
-              /*
               console.log('Trying to remove the same existing comments')
               
               let since_date = new Date()
@@ -158,7 +157,6 @@ jobs:
                   comment_id: commentToDelete.id
                 })
               }
-              */
 
               if (!validationResult.valid) {
                 console.log('Creating new comment');
@@ -182,7 +180,7 @@ jobs:
                   state: 'closed',
                 });
 
-                console.log('Closing the ticket');
+                console.log('Locking the ticket');
                 github.issues.lock({
                   issue_number: context.issue.number,
                   owner: context.repo.owner,
