--- a/.github/workflows/spam-remover.yml
+++ b/.github/workflows/spam-remover.yml
@@ -29,6 +29,7 @@ jobs:
             const issueTitle = context.payload.issue.title;
             const issueLabels = context.payload.issue.labels.map(i => i.name);
             const issueBody = context.payload.issue.body;
+            const issueLocked = context.payload.issue.locked;
             
             console.log('--- Issue Info ---');
             console.log('Title', issueTitle);
@@ -42,13 +43,17 @@ jobs:
               return;
             }
             
-            const validationResult = isIssueValid(issueTitle, issueLabels, issueBody, config);
-            
-            console.log('*** Manage label ***');
-            manageLabel(config, issueLabels, validationResult);
-            
-            console.log('*** Manage comments ***');
-            manageComments(config, config.commentsIdentification, validationResult);
+            if (issueLocked) {
+              console.log('*** Issue is already locked ***');
+            } else {
+              const validationResult = isIssueValid(issueTitle, issueLabels, issueBody, config);
+              
+              console.log('*** Manage label ***');
+              manageLabel(config, issueLabels, validationResult);
+              
+              console.log('*** Manage comments ***');
+              manageComments(config, config.commentsIdentification, validationResult);
+            }
             
 
             function isIssueValid(issueTitle, issueLabels, issueBody, config) {
